# JellyOS

./: .gitignore  .nvim.lua  README.md
boot/: Cargo.toml  Makefile  qemu.sh
boot/.cargo/: layout.ld
boot/src/: init.rs  main.rs
boot/src/init/: init.s
kern/: Cargo.toml  Makefile  qemu.sh  run.sh
kern/.cargo/: config.toml
kern/src/: allocator.rs  breadboard.rs  console.rs  fs.rs  init.rs  main.rs  mutex.rs  net.rs  param.rs  percore.rs  process.rs  shell.rs  traps.rs  vm.rs
kern/src/allocator/: bin.rs  bump.rs  tests.rs  util.rs
kern/src/fs/: sd.rs
kern/src/init/: init.s  panic.rs  vectors.s
kern/src/net/: uspi.rs
kern/src/process/: process.rs  scheduler.rs  stack.rs  state.rs
kern/src/traps/: frame.rs  irq.rs  syndrome.rs  syscall.rs
kern/src/vm/: pagetable.rs
lib/aarch64/: Cargo.toml
lib/aarch64/src/: asm.rs  lib.rs  macros.rs  sp.rs  vmsa.rs
lib/fat32/: Cargo.toml
lib/fat32/src/: mbr.rs  tests.rs  util.rs
lib/fat32/src/traits/: block_device.rs
lib/fat32/src/vfat/: cache.rs  cluster.rs  dir.rs  ebpb.rs  entry.rs  fat.rs  file.rs  metadata.rs  vfat.rs
lib/heap/: Cargo.toml
lib/heap/src/: bin.rs  bump.rs  lib.rs  linked_list.rs  tests.rs
lib/kernel_api/: Cargo.toml
lib/kernel_api/src/: lib.rs  syscall.rs
lib/pi/: Cargo.toml
lib/pi/src/: common.rs  gpio.rs  interrupt.rs  lib.rs  local_interrupt.rs  timer.rs  uart.rs
lib/pi/src/atags/: atag.rs  mod.rs  raw.rs
lib/shim/: Cargo.toml
lib/shim/src/: lib.rs  no_std.rs
lib/shim/src/no_std/ffi/: os_str_bytes.rs
lib/stack-vec/: Cargo.toml
lib/stack-vec/questions/: clone-for-pop  deref-in-tests  lifetime  push-fails
lib/stack-vec/src/: lib.rs  tests.rs
lib/ttywrite/questions/: bad-tests  invalid
lib/ttywrite/src/: main.rs
lib/volatile/: Cargo.toml
lib/volatile/src/: lib.rs
lib/xmodem/: Cargo.toml
lib/xmodem/src/: lib.rs  progress.rs  tests.rs
tut/: learn-arm.s
user/: Makefile  build.sh
user/code/: Cargo.toml  Makefile
user/code/.cargo/: config.toml  layout.ld
user/code/src/: allocator.rs  console.rs  lib.rs  logger.rs
user/fib/: Cargo.toml  Makefile
user/fib/src/: main.rs
user/shared/: Makefile  cr0.rs
user/sleep/: Cargo.toml
user/sleep/src/: main.rs
