[package]
name = "shim"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2021"

[dependencies]
cfg-if = "1.0"
core2 = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
hashbrown = "0.6.3"

[features]
no_std = ["core2"]
alloc = ["core2/alloc"]