[package]
name = "fib"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2021"

[lib]
name = "user"
path = "src/lib.rs"
crate-type = ["lib"] 

[profile.release]
panic = "abort"

[dependencies]
aarch64 = { path = "../../lib/aarch64/" }
heap = { path = "../../lib/heap/" }
kernel_api = { path = "../../lib/kernel_api" }
shim = { path = "../../lib/shim", features = ["no_std", "alloc"] }

